additions/canary/app-py-v2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-py-v2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
    nginx.ingress.kubernetes.io/canary-weight-total: "100"
spec:
  ingressClassName: nginx
  rules:
  - host: www.ingress.com
    http:
      paths:
      - backend:
          service:
            name: app-py-v2
            port:
              number: 5000
        path: /
        pathType: Exact
